infra/k8s/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: nofar-app
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
