infra/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: nofar-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
